# raytracer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: default_benchmark.rs
input/: config.json  config_second_old.json  scene.json  scene_old.json  scene_second_old.json
renders/: render.3png
src/: aabb.rs  bhv.rs  camera.rs  color.rs  config.rs  element.rs  elements.rs  interval.rs  lib.rs  main.rs  mat4.rs  materials.rs  onb.rs  pdf.rs  plane.rs  ray.rs  sphere.rs  vec3.rs
src/bvh/: aabb.rs  bvh_node.rs  bvh_node_sah.rs  mod.rs
src/elements/: cube.rs  mod.rs  obj.rs  quad.rs  sphere.rs  tests.rs  triangle.rs
src/linalg/: mat4.rs  mod.rs  onb.rs  vec3.rs  vec4.rs
src/materials/: dielectric.rs  diffuse_light.rs  lambertian.rs  materials.rs  metal.rs  mod.rs
src/render/: axis.rs  camera.rs  color.rs  config.rs  filter.rs  integrator.rs  interval.rs  mod.rs  pdf.rs  ray.rs  stats.rs
