[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
log = "0.4.20"
env_logger = "0.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.2"
indicatif = "0.17.5"
rayon = "1.7.0"
serde = { version = "1.0.188",  features = ["derive"] }
serde_json = "1.0.105"
png = "0.17.10"

[dev-dependencies]
test-log = "0.2.12"
criterion = "0.5.1"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
debug = false

[profile.dev]
strip = false
opt-level=0
debug=true

[[bench]]
name = "default_benchmark"
harness = false

[profile.dev.package."*"]
opt-level=3
debug=true